--- a/src/logging.properties
+++ b/src/logging.properties
@@ -14,6 +14,7 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.level = ALL
 java.util.logging.FileHandler.pattern = /Users/Thomas/IdeaProjects/AdressBook/AddressBookLogs.log
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.append = true
 
 # Format
 java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$-6s %2$s - %5$s%6$s%n
